	o Streemlining ParetoDensityEstimation to work better with ParetoRadius_fast and ParetoRadius
	o Provided MDstrips function for high-dimensional data (d>100) in case single violings are not visible in MDplot
	o MDplot: Due to the changes in ParetoRadius_fast, ParetoRadius and ParetoDensityEstimation, the MDplot is now 5 times faster, externelized code in helper function
	
Version 1.3.5 (CRAN, 2025-08-24)
	o Bugfix in Classplot for plotly. Now points are colored if no names are given and legend can be disabled
	o Multiplot can now have a title via main argument
	o ParetoRadius_fast function implemented using the same algorithm as ParetoRadius, but slightly more fast although sometime maybe not so stable
	
Version 1.3.4 (GitHub, 2025-02-14)
	o Classplot takes now sample for visualization if more than 5000 points are used. Sample plottet is optimal regarding visualization.
	o Classplot accepts now named Colors parameter for non ordered user specific colors for each label of Cls
	o bugfix in CombineRows
	o PlotGraph2D is now faster by transfering code to cpp
	
Version 1.3.3 (CRAN, 2025-01-26)
	o Classplot plots now small classes on top, if boolean SmallClassesOnTop is set true
	o Meanrobust and Stdrobust accept now both trim parameters in percent
	o PDEnormrobust input parameters extended to set two and three sigma environment 
	o ParetoDensityEstimation warnings corrected if data exists outside of user set kernels
	o ClassBarPlot function plots values for each class and instance as bar plot with optional error deviation
	o ROC function plots the receiver operating characteristic curve in plotly
	
Version 1.3.2 (CRAN, 2023-10-10)
	o ClassMDplot now allows to set the color if each violin
	o Fanplot and Piechart: changed color palette
	o Fanplot: corrected plotrix function so that colors are mapped more consistently 	
	o InpectVariable: xlim can now be set for optimal histogram and not only for PDEplot	