@@ -2,13 +2,13 @@ Package: DataVisualizations
 Type: Package
 Title: Visualizations of High-Dimensional Data
 Version: 1.4.0
-Date: 2025-10-01
+Date: 2025-10-31
 Authors@R: c(person("Michael", "Thrun", email= "m.thrun@gmx.net",role=c("aut","cre","cph"), comment = c(ORCID = "0000-0001-9542-5543")),person("Felix", "Pape",role=c("aut","rev")),person("Onno", "Hansen-Goos",role=c("ctr","ctb")),person("Quirin", "Stier",role=c("ctb","rev"), comment = c(ORCID = "0000-0002-7896-4737")),person("Hamza", "Tayyab",role=c("ctr","ctb")),person("Luca", "Brinkmann",role=c("ctr","ctb")),person("Dirk", "Eddelbuettel",role=c("ctb")),person("Winston", "Chang",role=c("ctb")),person("Craig", "Varrichio",role=c("ctb")),person("Alfred", "Ultsch",role=c("dtc","ctb","ctr")))
 Maintainer: Michael Thrun <m.thrun@gmx.net>
 Description: Gives access to data visualisation methods that are relevant from the data scientist's point of view. The flagship idea of 'DataVisualizations' is the mirrored density plot (MD-plot) for either classified or non-classified multivariate data published in Thrun, M.C. et al.: "Analyzing the Fine Structure of Distributions" (2020), PLoS ONE, <DOI:10.1371/journal.pone.0238835>. The MD-plot outperforms the box-and-whisker diagram (box plot), violin plot and bean plot and geom_violin plot of ggplot2. Furthermore, a collection of various visualization methods for univariate data is provided. In the case of exploratory data analysis, 'DataVisualizations' makes it possible to inspect the distribution of each feature of a dataset visually through a combination of four methods. One of these methods is the Pareto density estimation (PDE) of the probability density function (pdf). Additionally, visualizations of the distribution of distances using PDE, the scatter-density plot using PDE for two variables as well as the Shepard density plot and the Bland-Altman plot are presented here. Pertaining to classified high-dimensional data, a number of visualizations are described, such as f.ex. the heat map and silhouette plot. A political map of the world or Germany can be visualized with the additional information defined by a classification of countries or regions. By extending the political map further, an uncomplicated function for a Choropleth map can be used which is useful for measurements across a geographic area. For categorical features, the Pie charts, slope charts and fan plots, improved by the ABC analysis, become usable. More detailed explanations are found in the book by Thrun, M.C.: "Projection-Based Clustering through Self-Organization and Swarm Intelligence" (2018) <DOI:10.1007/978-3-658-20540-9>.
 License: GPL-3
 Imports: Rcpp (>= 0.12.12), RcppParallel (>= 5.1.4), ggplot2, sp, pracma, reshape2
-Suggests: plyr, MBA, ggmap, plotrix, rworldmap, rgl, ABCanalysis, choroplethr, R6, parallelDist, knitr (>= 1.12), rmarkdown (>= 0.9), vioplot, ggExtra, plotly, htmlwidgets, diptest, moments, signal, ggrepel, MASS, ROCit, ScatterDensity (>= 0.0.3), colorspace, viridis, gridExtra
+Suggests: plyr, MBA, ggmap, plotrix, rworldmap, rgl, ABCanalysis, parallelDist, knitr (>= 1.12), rmarkdown (>= 0.9), vioplot, ggExtra, plotly, htmlwidgets, diptest, moments, signal, ggrepel, MASS, ROCit, ScatterDensity (>= 0.0.3), colorspace, viridis, gridExtra
 LinkingTo: Rcpp, RcppParallel
 Depends: R (>= 3.5)
 SystemRequirements: GNU make, C++17
