@@ -11,7 +11,7 @@ export(Classplot)
 export(ClassBarPlot)
 export(ClassPDEplotMaxLikeli)
 export(Crosstable)
-export(Choroplethmap)
+#export(Choroplethmap)
 export(CombineCols)
 export(CombineRows)
 export(cbind_fill)
